--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,7 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+    "skipLibCheck": true,
     "watch": false
   },
   "include": ["functions/**/*.ts", "typings/**/*.d.ts"],
